fixing spinner z-index

--- a/public/style/chat.less
+++ b/public/style/chat.less
@@ -49,7 +49,7 @@ text-size-adjust: none;
 		width: 100%;
 		height: 100%;
 		background-color: #fff;
-		z-index:100;
+		z-index:100000;
 		text-align: center;
 		padding-top:10%;
 		img.loading{
